+ -> Addition
^ -> Change
- -> Removed
! -> Note

04-Dec-2010 Christophe Demko
 # [#23436] Cannot utilize more than one spacer field type in component config.xml
 # Omitting of commit in [#22606]

04-Dec-2010 Jean-Marie Simonet
 $ Adding missing ini string
 #$ Adding Phnom Penh in time zones. Updating xx-XX.ini(s)
 # Missing file in [#23016] breaks global config when debug on

03-Dec-2010 Ian MacLennan
 # [#23016] Use minified/uncompressed files for more Scripts (Rouven Weßling)

03-Dec-2010 Mark Dexter
# [#23133] Back end edit screens need ACL
# [#23562] Categories & Menus Batch ACL checks missing
# [#23554] Alternative layout example (Elin Waring)
# [#23558] Customer Group cannot save article from category list
# [#23590] Clean up commented code in weblinks (Elin Waring)
# [#23169] Remove the border and frameborder attributes. (Rouven Weßling)
# [#21765] Codemirror doesn't work with XHTML is served with an XML MIME type (Rouven Weßling)
# [#22664] Issue with displayed records after change of filters
# [#23599] Add a tooltip that a password needs to have at least 4 characters.

03-Dec-2010 Christophe Demko
 # [#22033] Apostrophe du mode hors ligne
 # [#23568] Media field needs to cope with com_media ACL
 # [#23433] Skip the automaticall loading of plugin language file
 # [#22606] Unable to create several groups with the same name

03-Dec-2010 Jean-Marie Simonet
 $ Modifications of the installation ini files.
 # [#22351] component messages - my settings wrong display. Thanks Andrea.
 # [#23635] "Debug Permissions Report" buttons improvement. Thanks Dennis.
 # [#23636] Invalid using of JLIB_APPLICATION_ERROR_UNHELD_ID. Thanks Dennis.
 # [#23608] Sort by user group 500 error. Thanks Mark. Temporary fix.
 # [#23492] Aria-invalid missing on some invalid inputs. Thanks Andrea.

02-Dec-2010 Mark Dexter
# Typo in language file

02-Dec-2010 Christophe Demko
 # [#23615] Implementing tooltip for the filters settings in Content Options (Jean-Marie Simonet)